plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.18'
}

group 'com.crownpartners.intellivault'
version '0.11.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version intellijVersion
}

publishPlugin {
    token intellijPublishToken
    channels intellijPublishChannel
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

test {
    useJUnit()
}

patchPluginXml {
    changeNotes """
      <ul>
          <li>Unreleased (v0.11.0)
              <ul>
                <li>No longer suppoorts VLT &lt;v3.2, due to an imcompatability with IDEA running JDK11, which is the default.  Added active version detection during initialization to show an error if attempting to use an older version.</li>
                <li>Modified plugin source to use the modern gradle build setup.</li>
                <li>Changed how usernames and passwords are stored so that they are non longer in plain text.  This required removing support for versions of IDEA prior to 2019.1  Note: You may need to reset your repository username/passwords in the configuration due to this change.</li>
                <li>Updated the github readme with much improved steps for how to setup and use the plugin.</li>
              </ul>
          </li>
          <li>v0.10.0: Added multiple repository profiles and ability to select from run dialogs.</li>
          <li>v0.9.5: Fixed compile version to use JDK 1.6</li>
          <li>v0.9.4: Merged PR from sdehandt; Added option to bypass message dialogs.  Also re-branded to Razorfish Platforms and added support for VLT 3.</li>
          <li>v0.9.3: Updates to plugin metadata.</li>
          <li>v0.9.2: Fixing an issue where the temp directory isn't always deleted.</li>
          <li>v0.9.1: Added logging of output to the console, removed extraneous dialog options.</li>
      </ul>
      """
    pluginDescription """
    <p>A plugin for IntelliJ IDEA to interact with a CRX repository via the FileVault tool which is
      packaged with Adobe AEM/CQ.</p>
      <p>This plugin is largely based upon, and liberally borrows from, <a href="http://vaultclipse.sourceforge.net/">VaultClipse</a>
      which is a plugin for the Eclipse IDE for interacting with FileVault.</p>
      <p>The plugin source (as well as docs in the form of a README and bug reporting) can be found on <a href="https://github.com/shsteimer/IntelliVault">Github</a></p>
    """
    //please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
    sinceBuild 184
}